--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ env:
   RESOURCE_GROUP_NAME: orbitpelelbabtest01
 
   # specify your preferred region
-  REGION: notheurope
+  REGION: northeurope
 
   FRONTEND_DOCKER: FeatureFlagsWithContainerApps/Dockerfile
   FRONTEND_IMAGE: frontend
